# audio_transcription_mcp

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: design.md
model_converter/: README.md  pyproject.toml
model_converter/src/: convert.py
src/: audio.rs  config.rs  main.rs  mel.rs  tokenizer.rs  tools.rs  whisper.rs
