[package]
name = "audio_transcription_mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for audio transcription using Whisper ONNX"
license = "MIT"

[dependencies]
# MCP SDK
rmcp = { version = "0.17", features = ["server", "transport-io"] }

# ONNX Runtime
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }

# Audio processing
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "pcm", "vorbis"] }
rubato = "0.16"

# Tokenizer
tokenizers = { version = "0.21", features = ["onig"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
thiserror = "2"
byteorder = "1"
